# repository_creator

./: .gitignore  LICENCE  README.md  pyproject.toml
repository.chad.parry.org/: addon.xml
src/: repository_creator.py
